--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 15.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">31 minutes ago</div>
+                        <div class="date">41 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>What taxes will they increase at the Budget next month?</h3>
                         <div class="channel">Garys Economics</div>
-                        <div class="date">49 minutes ago</div>
+                        <div class="date">59 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -739,7 +739,7 @@
                     <div class="video-info">
                         <h3>Philly Hoagie Rolls Like You’ve Never Seen 😳 New Recipe Dropping Soon! #bread #asmr #baking</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -860,7 +860,7 @@
                     <div class="video-info">
                         <h3>The WORST Shot In Pro Clubs History</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2228,7 +2228,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 15.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">31 minutes ago</div>
+                            <div class="date">41 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>What taxes will they increase at the Budget next month?</h3>
                             <div class="channel">Garys Economics</div>
-                            <div class="date">49 minutes ago</div>
+                            <div class="date">59 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7436,7 +7436,7 @@
                         <div class="video-info">
                             <h3>Acceptance in the Present Moment, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8768,7 +8768,7 @@
                         <div class="video-info">
                             <h3>Philly Hoagie Rolls Like You’ve Never Seen 😳 New Recipe Dropping Soon! #bread #asmr #baking</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9616,7 +9616,7 @@
                         <div class="video-info">
                             <h3>The WORST Shot In Pro Clubs History</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9781,7 +9781,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US PROXIMITY CHAT BUT THE IMPOSTOR CAN CONTROL CREWMATES</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
