--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -387,7 +387,7 @@
                     <div class="video-info">
                         <h3>What Should You Do When AI Takes Over? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7326,7 +7326,7 @@
                         <div class="video-info">
                             <h3>What Should You Do When AI Takes Over? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
